--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
     "redux-devtools": "^3.4.0",
     "style-loader": "0.18.2",
